processed/gerrit/txt/36417.txt
Change:     36417
Subject:    LU-12844 lnet: fix strncpy bound error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36417
Change-Id:  I2d5840fd58c7b7d27ef1b2aa12f1f187d30abbfd
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2019-10-09 21:35:43.000000000
Updated:    2019-10-16 01:34:30.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   1 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Amir Shehata: +1; Andreas Dilger: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Amir Shehata

--- Commit Message ---
LU-12844 lnet: fix strncpy bound error

This patch fixes the following error while using gcc 8:

liblnetconfig.c: In function ‘lustre_lnet_parse_nids’:
liblnetconfig.c:320:3: error: ‘strncpy’ specified bound depends on
the length of the source argument [-Werror=stringop-overflow=]
   strncpy(entry, cur, len - 1);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
liblnetconfig.c:310:10: note: length computed here
    len = strlen(cur) + 1;
          ^~~~~~~~~~~
cc1: all warnings being treated as errors

Change-Id: I2d5840fd58c7b7d27ef1b2aa12f1f187d30abbfd
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/36417
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Amir Shehata <ashehata@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>

--- Review History ---

--- Message (Jian Yu, 2019-10-09 21:35:43.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-10-09 21:37:37.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2019-10-09 22:13:09.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/9104/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/68904/ : SUCCESS

--- Message (Autotest, 2019-10-09 22:13:49.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-1 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:49.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:50.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-1 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:50.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-2 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:50.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-3 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:50.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-2 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-zfs session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-4 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-3 session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:52.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs-arm session for build 68904.

--- Message (Autotest, 2019-10-09 22:13:52.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-4 session for build 68904.

--- Message (Andreas Dilger, 2019-10-09 22:21:45.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Amir Shehata, 2019-10-09 23:45:26.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Autotest, 2019-10-10 04:53:23.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-zfs session for build 68904. Requested by jianyu because of LU-11768.

--- Message (Autotest, 2019-10-10 04:53:24.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-dne-part-1 session for build 68904. Requested by jianyu because of LU-12470.

--- Message (Autotest, 2019-10-10 16:46:59.000000000) ---
Patch Set 1:

Trevis Autotest2 retesting enforced review-dne-zfs-part-1 session for build 68904. Requested by Peter Jones because of LU-9881.

--- Message (James Simmons, 2019-10-11 16:35:54.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2019-10-16 01:34:28.000000000) ---
Patch Set 1:

(1 comment)

--- Message (unknown, 2019-10-16 01:34:30.000000000) ---
Change has been successfully cherry-picked as cebda7a478f9943f10b9a3388377c61a54957a87 by Oleg Drokin
